--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,58 @@
-/Lib
-/env
-/venv
-.idea
-vercel.json
-
-# byte-compiled / optimized / DLL files
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 
-# tests and coverage
-*.pytest_cache
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
 .coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*,cover
 
-# database & logs
-*.db
-*.sqlite3
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
 *.log
-data/
 
-# venv
-env
-venv
+# Sphinx documentation
+docs/_build/
 
-# other
-.DS_Store
-
-# javascript
-package-lock.json
-
-staticfiles/*
-!staticfiles/.gitkeep 
-.vscode/symbols.json
-
-apps/static/assets/node_modules
-apps/static/assets/yarn.lock
-apps/static/assets/.temp
-
-*.pyc
+# PyBuilder
+target/
+venv/
