--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
 asgiref==3.7.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
+dj-database-url==2.1.0
 Django==4.2.3
+django-heroku==0.3.1
 djangorestframework==3.14.0
+gunicorn==21.2.0
 idna==3.4
+mypy==1.5.1
+mypy-extensions==1.0.0
+packaging==23.1
+psycopg2==2.9.8
+psycopg2-binary==2.9.8
 pytz==2023.3
 requests==2.31.0
 sqlparse==0.4.4
+tomli==2.0.1
 typing_extensions==4.7.1
 urllib3==2.0.4
+whitenoise==6.5.0
